index.html added

--- a/index.htm
+++ b/index.htm
@@ -53,6 +53,7 @@
 		<img src="img/vision2.jpg" class="img"> <img src="img/vision3.jpg" class="img"><br>
 		<span>You are our main customer <i>We give you a<b> Good Servoce</b></i></span>
 	</div>
+  <p>Hello world</p>
 	<!--footer-->
 	<footer class="footer-menu">
 		<ul>
