index.html added

--- a/index.htm
+++ b/index.htm
@@ -54,6 +54,7 @@
 		<span>You are our main customer <i>We give you a<b> Good Servoce</b></i></span>
 	</div>
   <p>Hello world</p>
+  <p>welcome</p>
 	<!--footer-->
 	<footer class="footer-menu">
 		<ul>
