--- a/test/a.html
+++ b/test/a.html
@@ -53,10 +53,10 @@
 
     <section id="dinner">
       <h2>Dinner Recipes</h2>
-      <img src="Dinner.jpeg" alt="Breakfast Recipe" style="width: 190px; height: 190px;">
-      <img src="Dinner.jpeg" alt="Breakfast Recipe" style="width: 190px; height: 190px;">
-      <img src="Dinner.jpeg" alt="Breakfast Recipe" style="width: 190px; height: 190px;">
-      <img src="Dinner.jpeg" alt="Breakfast Recipe" style="width: 190px; height: 190px;">
+      <img src="lunch.jpg" alt="Breakfast Recipe" style="width: 190px; height: 190px;">
+      <img src="lunch.jpg" alt="Breakfast Recipe" style="width: 190px; height: 190px;">
+      <img src="lunch.jpg" alt="Breakfast Recipe" style="width: 190px; height: 190px;">
+      <img src="lunch.jpg" alt="Breakfast Recipe" style="width: 190px; height: 190px;">
       <!-- Add dinner recipes here -->
     </section>
 
